# uncertain_flow_sampling

Eulerian/: CMakeLists.txt  DoubleGyrefield.cxx  main.cxx  run.sh
Lagrangian/: notes.txt
Lagrangian/generate_flowmaps/entropy/: CMakeLists.txt  generate_entropy_fm.cxx  run.sh
Lagrangian/generate_flowmaps/uncertainty/: CMakeLists.txt  generate_uncertainty_fm.cxx  run.sh
Lagrangian/generate_flowmaps/uniform/: CMakeLists.txt  generate_uniform_fm.cxx  run.sh
Lagrangian/generate_flowmaps/vorticity/: CMakeLists.txt  build.sh  generate_vorticity_fm.cxx  run.sh
Lagrangian/generate_gt_pathlines/: CMakeLists.txt  DoubleGyre_Pathlines_GT.vtk  generate_gt_pathlines.cxx  run.sh  seeds.txt
Lagrangian/generate_test_seeds/: GenSeeds  build.sh  generate_test_seeds.cxx  run.sh
Lagrangian/reconstruct_pathlines/: CMakeLists.txt  build.sh  reconstruct_pathlines.cxx  run.sh
